--- a/app/componentes/vans/vans.css
+++ b/app/componentes/vans/vans.css
@@ -1,26 +1,8 @@
-/* Zerar margens e padding globais */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
 .vans {
-    min-width: 400px;
-    width: 100vw;
-    height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scrollbar-width: none;
-}
-
-.vans::-webkit-scrollbar {
-    display: none;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  background-color: var(--cor-fundo, #f5f6f7);
+  color: var(--cor-texto, #111);
 }
